--- a/lib/Python/CMakeLists.txt
+++ b/lib/Python/CMakeLists.txt
@@ -8,15 +8,19 @@ include(NpcompPython)
 # TODO: This should not be wired in at such a low/unconditional level.
 # It is done here to be kept with the other LLVM initialization until a better
 # place can be found for it.
-set(ExtraInit_LIBADD)
-if(NPCOMP_ENABLE_REFJIT)
-  llvm_map_components_to_libnames(refjit_llvm_libs
-    nativecodegen
-  )
-  message(STATUS "Including LLVM libs for RefJit: ${refjit_llvm_libs}")
-  list(APPEND ExtraInit_LIBADD
-    ${refjit_llvm_libs})
-endif()
+# set(ExtraInit_LIBADD)
+# if(NPCOMP_ENABLE_REFJIT)
+#   llvm_map_components_to_libnames(refjit_llvm_libs
+#     nativecodegen
+#   )
+#   message(STATUS "Including LLVM libs for RefJit: ${refjit_llvm_libs}")
+#   list(APPEND ExtraInit_LIBADD
+#     ${refjit_llvm_libs})
+# endif()
+
+# include_directories(
+#   ${PYTHON_INCLUDE_DIRS}
+#   )
 
 set(PYBIND_SOURCES
   MlirInit.cpp
@@ -32,7 +36,6 @@ add_library(NPCOMPPythonCommon
 
 target_link_libraries(NPCOMPPythonCommon
   pybind11::module
-
   NPCOMPInitAll
 
   # Core dialects
