--- a/frontends/pytorch/csrc/CMakeLists.txt
+++ b/frontends/pytorch/csrc/CMakeLists.txt
@@ -1,3 +1,11 @@
+if(NPCOMP_ENABLE_TORCH_TYPE_DISPATCH)
+  add_subdirectory(type_dispatch)
+else()
+  add_subdirectory(c10_dispatch)
+endif()
+
+include(NpcompPython)
+
 include_directories(
   ${TORCH_INCLUDE_DIRS}
   ${TORCH_INSTALL_PREFIX}/include/TH
@@ -19,22 +27,26 @@ else()
   )
 endif()
 
-add_library(_torch_mlir SHARED
+add_library(NPCOMPTorchMLIRExt SHARED
   init_python_bindings.cpp
   )
-set_target_properties(_torch_mlir PROPERTIES PREFIX "")
-get_property(mlir_libs GLOBAL PROPERTY MLIR_ALL_LIBS)
-target_link_libraries(_torch_mlir
-  NPCOMPATenDialect
+target_link_libraries(NPCOMPTorchMLIRExt
   ${TORCH_LIBRARIES}
-  ${mlir_libs}
   ${PYTHON_LIBRARIES}
   ${torch_mlir_optional_libraries}
   torch_python
+
+  # NPCOMP shared library.
+  NPCOMP
+)
+
+set_target_properties(NPCOMPTorchMLIRExt PROPERTIES
+  LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/python
+  OUTPUT_NAME _torch_mlir
+  PREFIX "${PYTHON_MODULE_PREFIX}"
+  SUFFIX "${PYTHON_MODULE_EXTENSION}"
+  CXX_VISIBILITY_PRESET "hidden"
   )
 
-if(NPCOMP_ENABLE_TORCH_TYPE_DISPATCH)
-  add_subdirectory(type_dispatch)
-else()
-  add_subdirectory(c10_dispatch)
-endif()
+npcomp_python_target_compile_options(NPCOMPTorchMLIRExt)
+mlir_check_all_link_libraries(NPCOMPTorchMLIRExt)
