--- a/test/CAPI/CMakeLists.txt
+++ b/test/CAPI/CMakeLists.txt
@@ -1,16 +1,6 @@
-set(LLVM_LINK_COMPONENTS
-  Core
-  Support
-  )
-
-add_llvm_executable(npcomp-capi-ir-test
-  ir.c
-  )
+add_npcomp_executable(npcomp-capi-ir-test ir.c)
 llvm_update_compile_flags(npcomp-capi-ir-test)
 
-get_property(dialect_libs GLOBAL PROPERTY MLIR_DIALECT_LIBS)
 target_link_libraries(npcomp-capi-ir-test
   PRIVATE
-  NPCOMPCAPIIR
-  MLIRCAPIRegistration
-  ${dialect_libs})
+  NPCOMP)
