[RefBackend] Use new upstream SCF type conversions.

--- a/lib/RefBackend/CMakeLists.txt
+++ b/lib/RefBackend/CMakeLists.txt
@@ -22,6 +22,7 @@ add_npcomp_library(NPCOMPRefBackend
   MLIRIR
   MLIRLinalg
   MLIRSCFToStandard
+  MLIRSCFTransforms
   MLIRShapeToStandard
   MLIRStandard
   MLIRStandardOpsTransforms
