--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,4 +1,6 @@
 add_subdirectory(npcomp-opt)
-add_subdirectory(mnist-playground)
+if(${TORCH_FOUND})
+  add_subdirectory(mnist-playground)
+endif()
 add_subdirectory(npcomp-run-mlir)
 add_subdirectory(npcomp-shlib)
