--- a/include/npcomp/Dialect/Torch/IR/CMakeLists.txt
+++ b/include/npcomp/Dialect/Torch/IR/CMakeLists.txt
@@ -1,2 +1,15 @@
-add_mlir_dialect(TorchOps torch)
+set(LLVM_TARGET_DEFINITIONS TorchOps.td)
+mlir_tablegen(TorchOps.h.inc -gen-op-decls)
+mlir_tablegen(TorchOps.cpp.inc -gen-op-defs)
+mlir_tablegen(TorchDialect.h.inc -gen-dialect-decls -dialect=torch)
+add_public_tablegen_target(MLIRTorchOpsIncGen)
+add_dependencies(mlir-headers MLIRTorchOpsIncGen)
 
+set(LLVM_TARGET_DEFINITIONS OpInterfaces.td)
+mlir_tablegen(OpInterfaces.h.inc -gen-op-interface-decls)
+mlir_tablegen(OpInterfaces.cpp.inc -gen-op-interface-defs)
+add_public_tablegen_target(MLIRTorchOpInterfacesIncGen)
+add_dependencies(mlir-generic-headers MLIRTorchOpInterfacesIncGen)
+
+add_mlir_doc(TorchDialect -gen-dialect-doc TorchDialect Torch/)
+add_mlir_doc(TorchOps -gen-op-doc TorchOps Torch/)
