--- a/lib/Dialect/ATen/Transforms/CMakeLists.txt
+++ b/lib/Dialect/ATen/Transforms/CMakeLists.txt
@@ -5,6 +5,7 @@ add_npcomp_conversion_library(NPCOMPATenPasses
   ATenOpReport.cpp
   ATenToStd.cpp
   LivenessReport.cpp
+  RecognizeKernelsPass.cpp
   ReturnEliminationPass.cpp
 
   DEPENDS
