Make torch_mlir compatible with binary PyTorch installations.
* This has been anticipated for a long time in that it is quite hard to keep C++ binary compatibility across a system landscape as diverse as PyTorch, LLVM, and this project. This is why we based the PyTorch extension on the MLIR and NPCOMP C APIs only: that is the only sane linkage story for the entire matrix.
* Removes the few LLVM'isms in torch_mlir that had snuck in, using either STL or PyTorch support utilities. The new rule here is that LLVM C++ includes are forbidden at this level and (as stated in the design), torch_mlir should use the PyTorch runtime and support libraries (not introduce an incidental C++ dependency on LLVM).
* Also deletes mnist-playground as it was proving impossible to keep the grid of PyTorch vs system ABI divisions functioning. I am open to a less drastic course here (optional/disabled by default?)
* This gets us pretty close to just using PyTorch's extension builder API, which will be nice for distribution (i.e. it integrates well with the PyTorch ecosystem for deployment). I ended up just simplifying the in-tree CMake support for now.
* Fixes #138

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,14 +150,7 @@ message(STATUS "Found python libraries: ${Python3_LIBRARIES}")
 # Pytorch Configuration
 #-------------------------------------------------------------------------------
 
-if(NPCOMP_ENABLE_PYTORCH)
-  ProbeForPyTorchInstall()
-  if(NPCOMP_ENABLE_PYTORCH STREQUAL "OPTIONAL")
-    find_package(Torch)
-  else()
-    find_package(Torch REQUIRED)
-  endif()
-endif()
+NpcompFindPyTorch(${NPCOMP_ENABLE_PYTORCH})
 
 #-------------------------------------------------------------------------------
 # Pybind11 Configuration
@@ -186,8 +179,13 @@ add_subdirectory(include/npcomp)
 add_subdirectory(lib)
 add_subdirectory(python)
 add_subdirectory(test)
-add_subdirectory(frontends)
 
 # Tools needs to come late to ensure that NPCOMP_ALL_LIBS is populated.
 # Generally things after this point may depend on NPCOMP_ALL_LIBS or libNPCOMP.so.
 add_subdirectory(tools)
+
+if(${TORCH_FOUND})
+  add_subdirectory(frontends/pytorch)
+else()
+  message("Skipping pytorch frontend, because PyTorch not found!")
+endif()
