--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -8,8 +8,8 @@ add_custom_command(
   TARGET NPCOMPPythonResources
   COMMAND ${CMAKE_COMMAND} -E copy
         # TODO: Make the runtime library work for windows.
-        ${CMAKE_BINARY_DIR}/lib/libNPCOMPCompilerRuntimeShlib.so
-        ${CMAKE_CURRENT_BINARY_DIR}/npcomp/compiler/generic/backend/libNPCOMPCompilerRuntimeShlib.so
+        ${CMAKE_BINARY_DIR}/lib/libNPCOMPCompilerRuntimeShlib${CMAKE_SHARED_LIBRARY_SUFFIX}
+        ${CMAKE_CURRENT_BINARY_DIR}/npcomp/compiler/generic/backend/libNPCOMPCompilerRuntimeShlib${CMAKE_SHARED_LIBRARY_SUFFIX}
 )
 add_dependencies(NPCOMPPythonResources
   NPCOMPCompilerRuntimeShlib
