--- a/include/npcomp/Conversion/CMakeLists.txt
+++ b/include/npcomp/Conversion/CMakeLists.txt
@@ -2,4 +2,4 @@ set(LLVM_TARGET_DEFINITIONS Passes.td)
 mlir_tablegen(Passes.h.inc -gen-pass-decls ${NPCOMP_TABLEGEN_ARGS})
 add_public_tablegen_target(NPCOMPConversionPassIncGen)
 
-add_mlir_doc(Passes -gen-pass-doc ConversionPasses ./)
+add_mlir_doc(Passes -gen-pass-doc NPCOMPConversionPasses ./)
