[RD] Build init func's.
This commit adds an interface to all dataset ops to hook a variety of
functionality. One bit of functionality is a helper function to
build the relevant iterator type (using LLVM types). The second uses
a builder to insert LLVM instructions to initialize memory for the
iterator state.

Future work will add an additional interface method to build the
iterator get_next implementation.

--- a/include/npcomp/Dialect/RD/IR/CMakeLists.txt
+++ b/include/npcomp/Dialect/RD/IR/CMakeLists.txt
@@ -1,1 +1,9 @@
 add_mlir_dialect(RDOps rd)
+
+# TODO: convert to using `add_mlir_interface`.
+set(LLVM_TARGET_DEFINITIONS RDDatasetInterface.td)
+mlir_tablegen(RDDatasetInterface.h.inc -gen-op-interface-decls)
+mlir_tablegen(RDDatasetInterface.cpp.inc -gen-op-interface-defs)
+add_public_tablegen_target(MLIRRDDatasetInterfaceIncGen)
+add_dependencies(mlir-generic-headers MLIRRDDatasetInterfaceIncGen)
+# </convert>
