[RD] Add `rd-build-next-func` pass.
This change defines a pass to duplicate a pipeline definition function
into a iterator-next function using the `[...].next` op translations.

This change also refactors some of the op infra to allow for greater reuse
of library routines in multiple passes.

--- a/lib/Dialect/RD/Transforms/CMakeLists.txt
+++ b/lib/Dialect/RD/Transforms/CMakeLists.txt
@@ -1,8 +1,10 @@
 add_npcomp_conversion_library(NPCOMPRDPasses
   BuildInitFuncPass.cpp
+  BuildNextFuncPass.cpp
   ExtractPipelineDef.cpp
   Passes.cpp
   MergeFuncs.cpp
+  RDDatasetInterface.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SOURCE_DIR}/include/npcomp/Dialect/RD/Transforms
