Add initial TorchScript module importer
It turns out that this was easiest to structure as a general IValue
importer, since torch module are just one of the possible IValue's.

We import the IValue object graph in a braindead fashion into basicpy
ops and a new `torch.nn_module` op that is used to model the
attributes/methods of a torch::jit::Module IValue. See `Torch/ops.mlir`
for an example, and also check out the .py import tests in
`frontends/pytorch/test/module_import`.

As part of this change, a few housekeeping tasks:
- extract some helpers from graph_importer.cpp
- more helpers around the C API
- misc touchups

--- a/include/npcomp/Dialect/Torch/IR/CMakeLists.txt
+++ b/include/npcomp/Dialect/Torch/IR/CMakeLists.txt
@@ -5,6 +5,11 @@ mlir_tablegen(TorchDialect.h.inc -gen-dialect-decls -dialect=torch)
 add_public_tablegen_target(MLIRTorchOpsIncGen)
 add_dependencies(mlir-headers MLIRTorchOpsIncGen)
 
+set(LLVM_TARGET_DEFINITIONS TorchTypes.td)
+mlir_tablegen(TorchTypes.h.inc -gen-typedef-decls)
+mlir_tablegen(TorchTypes.cpp.inc -gen-typedef-defs)
+add_public_tablegen_target(MLIRTorchTypesIncGen)
+
 set(LLVM_TARGET_DEFINITIONS OpInterfaces.td)
 mlir_tablegen(OpInterfaces.h.inc -gen-op-interface-decls)
 mlir_tablegen(OpInterfaces.cpp.inc -gen-op-interface-defs)
