--- a/frontends/pytorch/csrc/CMakeLists.txt
+++ b/frontends/pytorch/csrc/CMakeLists.txt
@@ -16,7 +16,9 @@ add_library(NPCOMPTorchMLIRExt SHARED
   builder/func_builder.cpp
   builder/graph_importer.cpp
   builder/module_builder.cpp
+  builder/ivalue_importer.cpp
   builder/python_bindings.cpp
+  builder/torch_to_mlir_utils.cpp
   init_python_bindings.cpp
   )
 
