--- a/lib/Dialect/Torch/IR/CMakeLists.txt
+++ b/lib/Dialect/Torch/IR/CMakeLists.txt
@@ -8,6 +8,7 @@ add_npcomp_dialect_library(NPCOMPTorchDialect
   DEPENDS
   MLIRTorchOpsIncGen
   MLIRTorchOpInterfacesIncGen
+  MLIRTorchTypesIncGen
 
   LINK_COMPONENTS
   Core
