Add support for prim::Loop op.
This is a funny one. It combines a `for` and `while` loop in one op. We
will need to write some conversions to `scf`.

--- a/lib/Dialect/Torch/IR/CMakeLists.txt
+++ b/lib/Dialect/Torch/IR/CMakeLists.txt
@@ -16,6 +16,7 @@ add_npcomp_dialect_library(NPCOMPTorchDialect
   LINK_LIBS PUBLIC
   MLIRIR
   MLIRSupport
+  MLIRControlFlowInterfaces
   NPCOMPBasicpyDialect
   NPCOMPNumpyDialect
 )
