--- a/lib/Backend/RefJIT/CMakeLists.txt
+++ b/lib/Backend/RefJIT/CMakeLists.txt
@@ -14,7 +14,7 @@ add_library(NPCOMPBackendRefJITPythonModule
 target_link_libraries(NPCOMPBackendRefJITPythonModule
   pybind11::module
   MLIRExecutionEngine
-  MLIRTargetLLVMIR
+  MLIRTargetLLVMIRExport
 
   NPCOMPRefBackendJITHelpers
 )
